--- a/style.css
+++ b/style.css
@@ -2,86 +2,207 @@
 
 body {
     font-family: 'Cabin';
-    background-color: #758190;
+    /* background-color: white; */
+    /* background-image: url("assets/tentacles.png");
+    background-repeat: no-repeat; */
+    /* background: url("assets/tentacles.png") bottom no-repeat; */
+    /* background: url("assets/tentacles.png") center 100px no-repeat; */
+    background-color: white;
+    /* image, h-position v-position/size, repeat */
+    background: url("assets/tentacles.png") 45% 40%/225% no-repeat;
+    background-color:  hsla(0, 0%, 100%, 0.85);
+    background-blend-mode: saturation;
+    width: 90%;
+    margin: auto;
 }
 
-#tentacles {
-    width: 50px;
+#games-list {
+    width: min-content;
+    background-color: white;
 }
 
-.header {
+img {
+    border-radius: 4%;
+}
+
+header {
     display: flex;
-    background-color: lightblue;
-    padding: 1%;
-    align-items: center;
-    margin-left: -10px;
-    margin-right: -10px;
-    margin-top: -10px;
+    justify-content: space-between;
+    align-content: center;
 }
 
-.stats-container {
+#logo {
     display: flex;
-    gap: 0.5rem;
-    flex-direction: row-reverse;
-    align-items: stretch;
+    flex-direction: column;
+    justify-content: center;
+    width: min-content;
+    text-align: center;
+    padding: 0.5%;
+    background-color: rgba(0, 0, 104, 0.176);
+}
+
+#logo p{
+    margin: -10% 0 -5%;
+} 
+
+#logo img{
+    width: 50%;
+    /* background-color: rgb(209, 209, 244); */
+}
+
+header search {
+    margin-top: 1.5%;
+}
+
+#welcome-container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 10%;
+    padding: 5% 7%;
 }
 
 #top-games {
-    flex-direction: row;
+    display: flex;
+    flex-wrap: wrap;
+    /* color: rgb(164, 93, 0); */
+    color: rgb(114, 65, 0);
 }
 
-.stats-card {
-    background-color: #a8b0bc;
-    border-radius: 7px;
-    padding: 1%;
-    margin: 1%;
-    width: 100%;
-    text-align: center;
+#top-games p{
+    margin: 0;
+    font-size: 80%;
+    font-weight: 400;
 }
 
-.stats-card:hover {
+#top-games h4{
+    margin-left: 0;
+    margin-bottom: 2%;
+}
+
+#top-games img{
+    width: 90%;
+}
+
+#first-game, #second-game {
+    /* background-color: rgba(249, 141, 0, 0.233); */
+    border-radius: 3%;
+    box-shadow: inset -20px -15px 40px rgba(249, 141, 0, 0.233);
+}
+
+#first-game, #second-game:hover {
     cursor: pointer;
-    box-shadow: 0 0 30px lightblue;
+}
+
+#welcome {
+    margin-top: 15%;
+}
+
+#welcome h1{
+    font-size: 200%;
+    margin: 2% 0 2%;
+    color: rgb(0, 0, 104);
+}
+
+#welcome p::first-letter{
+    font-size: 110%;
+}
+
+#stats {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    margin: 5%;
 }
 
 #num-contributions, #total-raised, #num-games {
-    font-size: 50px;
+    padding: 1%;
+    border-radius: 4%;
+    background-color: rgba(0, 0, 104, 0.048);
+    font-weight: 600;
+}
+
+div:has(> #games-button) {
+    text-align: center;
+}
+
+#games-button {
+    font-size: 125%;
+    border-width: 0;
+    border-radius: 15%;
+    padding: 2%;
+    color:rgb(0, 0, 104);
+    background-color: rgba(249, 141, 0, 0.233);
+}
+
+#games-button:hover {
+    cursor: pointer;
+    font-size: 150%;
+    background-color: rgba(249, 141, 0, 0.429);
+    transition: 0.25s ease-out;
 }
 
 #games-container {
+    display: grid;
+    grid-template-rows: 1fr auto;
+    padding: 2%;
+    /* background-color: blue; */
+}
+
+#games-header {
+    display: flex;
+    justify-content: space-between;
+    margin: 2%;
+}
+
+#games-header h1{
+    font-size: 150%;
+}
+
+#filter-options {
+    display: flex;
+    width: 25%;
+    justify-content: space-between;
+}
+
+#games {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
 
-.game-img {
-    width: 100%;
-    border-radius: 5px;
-    box-shadow: 0 0 10px #FFFFFF;
-}
-
+/* Style for games appended to games container
+    using js */
 .game-card {
-    background-color: #FFFFFF;
-    padding: 1%;
-    margin: 1%;
-    width: 300px;
+    width: 30%;
+    margin: 0 0 6%;
+}
+
+.game-card img{
+    width: 100%;
+}
+
+.game-card-text {
+    display: grid;
+    width: 90%;
+    margin: auto;
+}
+
+.game-card-descr h4, p{
+    margin: 1% 0 4%;
+    font-size: 90%;
+}
+
+.game-card-stats {
+    display: flex;
+    justify-content: space-around;
+    margin: auto;
     text-align: center;
-    border-radius: 7px;
+    width: 100%;
 }
 
-.game-card:hover {
-    cursor: pointer;
-    box-shadow: 0 0 30px lightblue;
-}
+.game-card-stats p{
+    width: min-content;
+} 
+/* find way to attach .game-card-stats
+to bottom of game-card */
 
-#button-container {
-    text-align: center;
-}
-
-button {
-    font-family: 'Cabin';
-    border: none;
-    padding: 1%;
-    margin: 1%;
-    border-radius: 7px;
-}
